# mcp-lab

./: .gitignore  .markdownlint-cli2.jsonc  .markdownlint.json  .mcp.json  AGENTS.md  PROGREES.md  README.md  pyproject.toml  skills-lock.json
docs/: draft.md  guide.md  http-gateway-draft.md  http-gateway-guide.md  http-gateway-phase-scope-adr.md  http-gateway-spec.md  spec.md
http2mcp/: __init__.py  _internal_utils.py  config.py  http_client.py  metrics.py  models.py  openapi.py  registry.py  server.py  tools.py
http_adaptor/: __init__.py  config.py  exceptions.py  http_client.py  metrics.py  models.py  openapi.py  registry.py  server.py  tools.py
mcp-servers/http_gateway/: README.md  pyproject.toml
mcp-servers/http_gateway/http_gateway/: __init__.py  gateway_tools.py  http_client.py  metrics.py  models.py  openapi.py  registry.py  server.py
mcp-servers/http_gateway/tests/: conftest.py  test_gateway_tools.py  test_http_client.py  test_metrics.py  test_openapi.py  test_registry.py
tests/: conftest.py  test_config.py  test_http_client.py  test_metrics.py  test_models.py  test_openapi.py  test_registry.py  test_server.py  test_server_cli.py  test_tools.py
