[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "http2mcp"
version = "0.1.0"
description = "An MCP server that turns any HTTP API into an MCP tool"
readme = "README.md"
authors = [{ name = "xbhel", email = "lxbhel@163.com" }]
requires-python = ">=3.12"
dependencies = [
    "mcp[cli]>=1.0",
    "httpx>=0.27",
    "tenacity>=8.0",
    "jsonschema>=4.0",
    "pydantic>=2.0",
    "pyyaml>=6.0",
    "bcrypt>=4.0",
]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "pytest-randomly>=3.15",
    "types-jsonschema>=4.0",
    "types-PyYAML>=6.0",
    "pytest-cov>=5.0",
    "respx>=0.21",
    "ruff>=0.8.0",
    "mypy>=1.17.0",
]

[project.scripts]
http2mcp = "http2mcp.server:main"

[tool.hatch.build.targets.wheel]
packages = ["http2mcp"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
pythonpath = ["."]

[tool.ruff]
line-length = 100
target-version = "py312"
exclude = [".agents"]

[tool.ruff.lint]
select = [
    "A",     # flake8-builtins
    "ARG",   # flake8-unused-arguments
    "ASYNC", # flake8-async
    "B",     # flake8-bugbear
    "C4",    # flake8-comprehensions
    "DTZ",   # flake8-datetimez
    "E",     # pycodestyle errors
    "EM",    # flake8-errmsg
    "EXE",   # flake8-executable
    "F",     # pyflakes
    "FA",    # flake8-future-annotations
    "FLY",   # flynt
    "FURB",  # refurb
    "I",     # isort
    "ICN",   # flake8-import-conventions
    "INT",   # flake8-gettext
    "ISC",   # implicit-str-concat
    "LOG",   # flake8-logging
    "N",     # pep8-naming
    "PERF",  # perflint
    "PGH",   # pygrep-hooks
    "PIE",   # flake8-pie
    "PT",    # pytest style
    "RET",   # flake8-return
    "RSE",   # flake8-raise
    "RUF",   # Ruff-specific lints
    "S",     # flake8-bandit
    "SIM",   # flake8-simplify
    "SLF",   # flake8-self
    "SLOT",  # flake8-slots
    "TC",    # flake8-type-checking
    "TID",   # ban relative imports
    "TRY",   # tryceratops
    "UP",    # pyupgrade
    "W",     # pycodestyle warnings
    "YTT",   # flake8-2020
]
ignore = [
    "ANN001", # missing type annotation for 'self' in method
    "B028",   # No explicit `stacklevel` keyword argument found
    "COM812", # ignore when using ruff-format
    "G004",   # Logging statement uses f-string
    "ISC001", # ignore when using ruff-format
    "N818",   # Exception name should be named with an Error suffix
    "RUF012", # Mutable class attributes should be annotated with `typing.ClassVar`
    "S404",   # `subprocess` module is possibly insecure
    "EM101",  # Flags string literals directly in exceptions
    "EM102",  # Flags f-string literals used in exception constructors
    "TRY003", # Flags avoid specifying long messages outside the exception class
    "TC003",  # Standard library imports used only for typing are acceptable at runtime.
]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = [
    "S101", # use of assert
    "SLF001", # accessing protected member
    "ARG001", # unused function argument
    "ARG002", # unused method argument
    "ARG005", # unused lambda argument
    "D104", # Missing docstring in public package
    "D200", # One-line docstring should fit on one line with quotes
    "S101", # use of assert
    "S603", # `subprocess` call: check for execution of untrusted input
    "S106", # Possible hardcoded password assigned to argument: "password"
    "S108", # Probable insecure usage of temporary file or directory: "/tmp"
    "TC002",  # Third-party imports used only for typing are acceptable at runtime.
]

[tool.coverage.run]
source = ["http2mcp"]
omit = ["tests/*"]

[tool.coverage.report]
fail_under = 80
exclude_also = ["if t.TYPE_CHECKING", "raise NotImplementedError", ": \\.{3}"]

[tool.mypy]
strict = true
pretty = true
show_error_codes = true
warn_unreachable = false
files = ["http2mcp", "tests"]
exclude = "(?x)(^.agents/.*$)"

[[tool.mypy.overrides]]
module = ["tests.*"]
disable_error_code = ["no-untyped-def"]
disallow_untyped_defs = false

[[tool.mypy.overrides]]
module = ["yaml", "jsonschema"]
ignore_missing_imports = true
